# prev_gen_ux

./: DEVELOP.md  README.md
backend/: Dockerfile  compose.yaml  prevgen.service  pyproject.toml  site.nginx
backend/app/: controller.py  main.py
backend/app/spec/: openapi.yaml
backend/server/: __main__.py  controller.py  main.py  requirements.txt
backend/server/spec/: openapi.yaml
frontend/: color.js  index.css  index.html  index.js  manifest.json  palette.js  picker.js  settings.js  tile.js
frontend/materialComponents/: material-components-web.css
frontend/pixi/: pixi-unsafeeval.js  pixi-viewport.js  pixi.js
